--- a/css/status.css
+++ b/css/status.css
@@ -298,6 +298,11 @@ body {
     z-index: 10000;
 }
 
+/* Ensure name input modal has highest priority */
+#name-input-modal {
+    z-index: 10001;
+}
+
 .modal.hidden {
     display: none;
 }
